[gd_scene load_steps=17 format=3 uid="uid://bfbfsxtv3oxjp"]

[ext_resource type="Script" path="res://src/MythState/MythStateMachine.gd" id="1_2fody"]
[ext_resource type="PackedScene" uid="uid://drwskd2xatxxd" path="res://media/ui/message_box.tscn" id="1_66320"]
[ext_resource type="Script" path="res://src/MythState/MythStoryState.gd" id="2_67ns7"]
[ext_resource type="Script" path="res://src/MythState/MythQuestionState.gd" id="3_mwbll"]
[ext_resource type="Theme" uid="uid://cdur805sc8olm" path="res://media/ui/themes/basic_theme.tres" id="4_cpocl"]
[ext_resource type="Texture2D" uid="uid://t8itphhvx8vu" path="res://assets/background_scene.png" id="4_mtqmx"]
[ext_resource type="Script" path="res://src/ui/UserInputBox.gd" id="4_vl004"]
[ext_resource type="Texture2D" uid="uid://byy0j5x62gnet" path="res://assets/heiroglyphs.png" id="8_i4dsd"]
[ext_resource type="PackedScene" uid="uid://b21nluxsc7oxj" path="res://media/star_particle.tscn" id="9_re7fu"]
[ext_resource type="AudioStream" uid="uid://cj3rqngy2kxuu" path="res://assets/drum.wav" id="10_wk2ak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52bet"]
bg_color = Color(0.262745, 0.262745, 0.262745, 0.662745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkou5"]
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nts6q"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_jpxnp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.557514, 0.940909), -1.79207, -1.79207, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_35mdh"]
curve = SubResource("Curve_jpxnp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fkyq6"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(350, 120, 1)
angle_max = 360.0
angular_velocity_min = 15.0
angular_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.15
color = Color(0.74902, 1, 0.996078, 0.619608)
alpha_curve = SubResource("CurveTexture_35mdh")

[node name="MythPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("story_state", "question_state", "initial_state")]
script = ExtResource("1_2fody")
story_state = NodePath("StoryState")
question_state = NodePath("QuestionState")
initial_state = NodePath("StoryState")

[node name="StoryState" type="Node" parent="StateMachine" node_paths=PackedStringArray("messagebox")]
script = ExtResource("2_67ns7")
messagebox = NodePath("../../MarginContainer/Panel/MarginContainer/ScrollContainer/RichTextLabel")

[node name="QuestionState" type="Node" parent="StateMachine" node_paths=PackedStringArray("messagebox", "edit_box")]
script = ExtResource("3_mwbll")
messagebox = NodePath("../../MarginContainer/Panel/MarginContainer/ScrollContainer/RichTextLabel")
edit_box = NodePath("../../MarginContainer2/TextEdit")
answer_threshold = 0.45

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_mtqmx")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 273.0
offset_bottom = -431.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 98
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 98

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_52bet")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/ScrollContainer" instance=ExtResource("1_66320")]
custom_minimum_size = Vector2(440, 256)
layout_mode = 2
size_flags_horizontal = 3
text = ""
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = -431.0
offset_right = -40.0
offset_bottom = -203.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_group_ = true

[node name="TextEdit" type="TextEdit" parent="MarginContainer2"]
layout_mode = 2
theme = ExtResource("4_cpocl")
placeholder_text = "Tell me..."
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
script = ExtResource("4_vl004")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.367
anchor_right = 0.957
anchor_bottom = 0.603
offset_left = 300.75
offset_top = 339.422
offset_right = -280.75
offset_bottom = 64.598
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_cpocl")
theme_override_font_sizes/font_size = 18
text = "Next"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -446.0
offset_right = 163.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fkou5")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("8_i4dsd")

[node name="GPUParticles2D2" parent="." instance=ExtResource("9_re7fu")]
material = SubResource("CanvasItemMaterial_nts6q")
position = Vector2(256, 128)
amount = 6
process_material = SubResource("ParticleProcessMaterial_fkyq6")
explosiveness = 0.2
randomness = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_wk2ak")
pitch_scale = 0.5

[connection signal="state_entered" from="StateMachine/StoryState" to="MarginContainer2" method="hide"]
[connection signal="state_entered" from="StateMachine/StoryState" to="MarginContainer2/TextEdit" method="disable"]
[connection signal="state_entered" from="StateMachine/StoryState" to="Button" method="show"]
[connection signal="question_presented" from="StateMachine/QuestionState" to="MarginContainer2" method="show"]
[connection signal="question_presented" from="StateMachine/QuestionState" to="MarginContainer2/TextEdit" method="enable"]
[connection signal="question_presented" from="StateMachine/QuestionState" to="Button" method="hide"]
[connection signal="answer_submitted" from="MarginContainer2/TextEdit" to="StateMachine/QuestionState" method="_on_user_answer_recieved"]
[connection signal="mouse_entered" from="Button" to="AudioStreamPlayer" method="play"]
[connection signal="pressed" from="Button" to="StateMachine" method="advance"]

[editable path="MarginContainer/Panel/MarginContainer/ScrollContainer/RichTextLabel"]
